k8s/clusters/in-cluster/kube-prometheus-stack-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-proxy
spec:
  type: ExternalName
  externalName: authentik.authentik.svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-authentik
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  rules:
    - host: alertmanager.mareo.fr
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - alertmanager.mareo.fr
      secretName: alertmanager-tls
