k8s/clusters/in-cluster/petitstream-com.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petitstream-com
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: default
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petistream-com
            port:
              number: 80
